# FileMisc

./: .gitignore  CHANGES_UNIFIED_DIFF_U4.txt  CMakeLists.txt  DirOnlyProxyModel.cpp  DirOnlyProxyModel.h  FilePanel.cpp  FilePanel.h  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.Debug  Makefile.Release  PanelWrapper.cpp  PanelWrapper.h  QtFileManager  QtFileManager.cpp  QtFileManager.h  QtFileManager.pro  QtFileManagerAlt  QtFileManagerAlt.pro  README.md  TreePanel.cpp  TreePanel.h  example_batch_operation.yaml  filemanager.cpp  filemanager.h  main.cpp  script_interface_config.yaml  validation_report.sh
Docs/: CodeSuggistions.md  CommandMaster_Qs_ans_As.md  Copilot-ProjectRules.md  Merged.md  ProjectPlan.md  UI-Complex.md  projectidea-CommandMaster.md
DynamicFactory/: DynamicUiFactory.cpp  DynamicUiFactory.h  buttons.yaml  main.cpp
makeIt/: CMakeCache.txt  FileMisc  Makefile  cmake_install.cmake
makeIt/FileMisc_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
makeIt/FileMisc_autogen/EWIEGA46WW/: moc_FilePanel.cpp  moc_FilePanel.cpp.d
release/: moc_QtFileManager.cpp  moc_filemanager.cpp  moc_predefs.h
test/: dsl-parser.url
test/FullyWorking/Parser/4.1/cpp-dsl2json/: CMakeLists.txt  DSLCombineImproved_v1.dsl  DSLCombineImproved_v1.json  DSLCombineImproved_v1.yaml  README.md
test/FullyWorking/Parser/4.1/cpp-dsl2json/include/: dsl_defs.h  dsl_parser.h  utils.h
test/FullyWorking/Parser/4.1/cpp-dsl2json/src/: dsl_parser.cpp  json_parser.cpp  main.cpp  utils.cpp
test/FullyWorking/Parser/4.1/cpp-json2dsl/: CMakeLists.txt  CopilotProjectInstructions.md  DSLCombineImproved_v1x.dsl
test/FullyWorking/Parser/4.1/cpp-json2dsl/include/: json_parser.h
test/FullyWorking/Parser/4.1/cpp-json2dsl/src/: json_parser.cpp  main.cpp
test/dsl-parser/: CommandMasterApp.dsl  main.cpp  menu.yaml  qtdebug.txt
test/dsl-parser/dox/: ConnectionDiagram_simplified.md  dsl-json-roundtrip.md
test/dsl-parser/dsl2yaml/cmd2yaml/: main.cpp  parseDSLCmd2yaml.cpp
test/dsl-parser/dsl2yaml/cmd2yaml2/: CMakeLists.txt  command.yaml
test/dsl-parser/dsl2yaml/codellama_34b/: yaml-file.txt
test/dsl-parser/dsl2yaml/combined/: cmd.json  parseDSLMenu2yaml.cpp
test/dsl-parser/dsl2yaml/menu2yaml/: CMakeLists.txt  parseDSLMenu2yaml.h
test/dsl-parser/dsl2yaml/sav/combined/0/: parseDSLCmd2yaml.cpp
test/dsl-parser/dsl2yaml/yaml2cmd2/: command.yaml  main.cpp
test/parsing-tests/JSONImprovedLayout2DSL/: DSLCombineImproved_v1.dsl  DSLCombineImproved_v1.json  Makefile  json_to_dsl_parser  json_to_dsl_parser.cpp
test/parsing-tests/dslCombined2json/: CMakeLists.txt  CommandCombined.dsl.txt  dsl_parser.cpp  dsl_parser.h
test/parsing-tests/dslImprovedLayout2Json/: CMakeLists.txt  DSLCombineImproved_v1.dsl  DSLCombineImproved_v1.json  dsl_parser.cpp  dsl_parser.h  gui_parser  main.cpp
test/parsing-tests/dslMenu2json/: main.cpp
test/parsing-tests/jsonCombined2Dsl/: CMakeLists.txt  json_to_dsl.cpp  output.json
test/parsing-tests/jsonMenu2dsl/: json_to_dsl.cpp
test/parsing-tests/jsonMenu2dsl-component-agnostic/: json_to_dsl.cpp  json_to_dsl.h  main.cpp
test/parsing-tests/roundtripMenu/: CMakeLists.txt  CommandMasterAppMenu.dsl  dsl_generator.cpp  dsl_generator.h  dsl_parser.cpp  main.cpp
test/parsing-tests/simple-CmdParser/: dsl2yaml.cpp
test/poc/1/: yaml_test_minimal.url
test/poc/1/yaml_lib_minimal/: CMakeLists.txt  SimpleYamlUI.h  SimpleYamlUI.pc.in
test/poc/1/yaml_lib_minimal/ui_test/: CMakeLists.txt  ui.yaml
test/poc/1/yaml_test_minimal/: build.sh  test.cpp
test/poc/2/DynamicFactory/: CMakeLists.txt
test/poc/3/dsl-parser/: CMakeLists.txt  cmdmaster_parser.cpp  cmdmaster_parser.h  output.yaml  qtdebug.txt
test/poc/3/dsl-parser/dox/: ConnectionDiagram.md  ConnectionDiagram_2.md
test/poc/3/dsl-parser/dsl2yaml/cmd2yaml2/: parseDSLCmd2yaml.cpp
test/poc/3/dsl-parser/dsl2yaml/codellama_34b/: a.out  dls-file,txt
test/poc/3/dsl-parser/dsl2yaml/combined/: CMakeLists.txt  main.cpp  menu.json  parseDSLCmd2yaml.h  w
test/poc/3/dsl-parser/dsl2yaml/menu2yaml/: main.cpp
test/poc/3/dsl-parser/dsl2yaml/sav/combined/0/: CMakeLists.txt  main.cpp  parseDSL2yaml.h
test/poc/3/dsl-parser/dsl2yaml/yaml2cmd/: CommandMasterAppCmd.dsl  parseYAMLCmd2DSL.cpp
test/poc/3/dsl-parser/dsl2yaml/yaml2cmd2/: CMakeLists.txt  CommandMasterAppCmd.dsl  parseYAMLCmd2DSL.cpp  parseYAMLCmd2DSL.h
test/yaml_lib_minimal/: SimpleYamlUI.cpp
test/yaml_lib_minimal/ui_test/: example_usage.cpp
test/yaml_test_minimal/: button.yaml  test
